modified:   package-lock.json 	modified:   src/app/article/article.component.html 	modified:   src/app/information/information.component.html 	modified:   src/app/overview/overview.component.html 	modified:   src/app/overview/overview.component.scss 	modified:   src/app/overview/overview.component.ts 	modified:   src/app/summary/summary.component.html 	modified:   src/app/summary/summary.component.ts 	modified:   src/assets/Article1.json 	modified:   src/assets/Article2.json 	modified:   src/assets/Article3.json 	new file:   src/assets/FSS-IT_User_Manual.pdf 	modified:   src/index.html 	modified:   src/main.js

--- a/src/app/article/article.component.html
+++ b/src/app/article/article.component.html
@@ -1,14 +1,13 @@
 <main>
   <div id="mainInformation">
-    <div id="articleID">Z1245A01</div>
     <div id="month">June 2021</div>
     <div id="grArticle">GrArticle: {{ArticleID}}</div>
     <div id="articleText">{{ ArticleName }}</div>
 
-    <select id="filterbox" disabled>
-      <option>Article</option>
-    </select>
+    <!--<select id="filterbox" [(ngModel)]="selectedWebsite">
+    </select>-->
   </div>
+
   <br />
 <div id="mainGraphs">
   <div id="container" style="width:100%; height:390px;"></div>
