--- a/src/app/overview/overview.component.html
+++ b/src/app/overview/overview.component.html
@@ -1,20 +1,28 @@
-<header>
-    <div class="headerIcon">ADF</div> <b>Advanced Demand Forecast</b> <img id="headerImg"
-        src="https://www.plattform-i40.de/IP/Redaktion/DE/Anwendungsbeispiele/042-augmented-reality/logo-basf.png?__blob=normal&v=1&size=420w">
-
+<header style="background-color: rgb(54, 110, 183);">
+    <div class="headerIcon">FSS-TP</div> <b>Inspector Tool</b> <img id="headerImg"
+        src="https://h-lab.iism.kit.edu/img/LOGO_lang_klein_RZ.svg"
+        alt="Header Image" style="width: 200px; height: 50px;">
+        
+        <select onchange="window.location=this.options[this.selectedIndex].value" id="productSelect">
+            <option>Select Product</option>
+            <option value="/TeamProjekt/0000000/0/1">Luxury Bike</option>
+            <option value="/TeamProjekt/0000000/0/2">City Bike</option>
+            <option value="/TeamProjekt/0000000/0/3">Bike Bottle</option>
+        </select> 
 </header>
 <div class="menuBar" id="menuBar">
     <ul>
-        <li style="float:left"><a class="notClickable" disabled><i class="fas fa-th-list" ></i>Infoprovider</a></li>
-        <li style="float:left"><a class="selected" (click)="changeNav('Summary')" id="navSummary"><i class="fas fa-table"></i>Summary</a></li>
-        <li style="float:left"><a class="notClickable" disabled><i class="fas fa-chart-line"></i>Forecast</a></li>
-        <li style="float:left"><a class="notClickable" disabled><i class="fas fa-chart-bar"></i>Statistics</a></li>
-        <li style="float:left"><a (click)="changeNav('Article Forecast')"id="navArticleForecast"><i class="fas fa-chart-line"></i>Article Forecast</a></li>
+        <!--<li style="float:left"><a class="notClickable" disabled><i class="fas fa-th-list" ></i>Infoprovider</a></li>-->
+        <li style="float:left;"><a class="selected" (click)="changeNav('Summary')" id="navSummary"><i class="fas fa-table"></i>Summary</a></li>
+        <!--<li style="float:left"><a class="notClickable" disabled><i class="fas fa-chart-line"></i>Forecast</a></li>-->
+        <!--<li style="float:left"><a class="notClickable" disabled><i class="fas fa-chart-bar"></i>Statistics</a></li>-->
+        <li style="float:left;"><a (click)="changeNav('Article Forecast')"id="navArticleForecast"><i class="fas fa-chart-line"></i>Article Forecast</a></li>
+        
         <!--<li style="float:right; ">
                   <a href="#settings" style="margin-top:-8px">
                       <span style="font-size: 24px; color:rgb(122, 122, 122)"><i class="fas fa-cog"></i></span>
                   </a>
-              </li>-->
+              </li>-->      
         <li style="float:left;" >
             <a  (click)="openManual()">
                 <span id="manual" style=" color: #99D3ED;"><i class="fas fa-book"
@@ -23,6 +31,8 @@
            matTooltipPosition= "above"></i><i>User Manual</i></span>
             </a>
         </li>
+    
+        
     </ul>
     <hr id="menuBarLine">
 </div>
@@ -30,14 +40,14 @@
     <app-article id="Article" style="display: none;" #article ></app-article>
     <app-summary id="Summary" style="display: block;" #summary></app-summary>
 </main>
-<div id="chatIcon" (click)="showChat()" style="display: block; cursor: pointer"        #tooltip="matTooltip"
+<div id="chatIcon" (click)="showChat()" style="display: block; cursor: pointer; background-color: rgb(238, 103, 0);"        #tooltip="matTooltip"
            matTooltip="Click here to open the the conversational assistant Planny"
            matTooltipPosition= "above">
     <span style="font-size:32px"><i class="fas fa-comments"></i></span>
 </div>
-<aside id="webChat" class="webchat-container" style="display: none;">
-    <div id="closeIcon" (click)="hideChat()" style="display: block;">
-        <span style="font-size:12px">X</span>
+<aside id="webChat" class="webchat-container" style="display: none;border-width: 1px ;border-color: rgb(238, 103, 0);">
+    <div id="closeIcon" (click)="hideChat()" style="display: block; background-color: rgb(238, 103, 0);">
+        <span style="font-size:12px;">X</span>
     </div>
     <div style="float: right;width: 40px;height: 40px;"><img src="../../assets/images/avataaars.png" style="width: 40px;height: 40px; box-shadow: none;"> </div>
     <div  style="display: block; float: right; width: fit-content; margin: 8px 5px;">Planny</div>
