--- a/src/app/overview/overview.component.scss
+++ b/src/app/overview/overview.component.scss
@@ -39,6 +39,13 @@ hr {
   margin-right: 20px;
 }
 
+#productSelect {
+  height: 25px;
+  margin-top: 0px;
+  float:center;
+  margin-left: 40px;
+}
+
 main {
   margin-left: 20px;
   margin-right: 20px;
