modified:   src/app/overview/overview.component.html

--- a/src/app/overview/overview.component.html
+++ b/src/app/overview/overview.component.html
@@ -9,6 +9,7 @@
             <option value="/TeamProjekt/0000000/0/2">City Bike</option>
             <option value="/TeamProjekt/0000000/0/3">Bike Bottle</option>
         </select> 
+        <!--TEEEEEEEEEEEEEEEEEEEEEST-->
 </header>
 <div class="menuBar" id="menuBar">
     <ul>
