--- a/src/app/overview/overview.component.html
+++ b/src/app/overview/overview.component.html
@@ -1,13 +1,13 @@
 <header style="background-color: rgb(54, 110, 183);">
     <div class="headerIcon">FSS-TP</div> <b>Inspector Tool</b> <img id="headerImg"
-        src="https://h-lab.iism.kit.edu/img/LOGO_lang_klein_RZ.svg"
-        alt="Header Image" style="width: 200px; height: 50px;">
+        src="../../assets/images/Logo_BA.jpg"
+        alt="Header Image" style="width: 80px; height: 80px;">
         
-        <select onchange="window.location=this.options[this.selectedIndex].value" id="productSelect">
-            <option>Select Product</option>
-            <option value="/TeamProjekt/0000000/0/1">Luxury Bike</option>
-            <option value="/TeamProjekt/0000000/0/2">City Bike</option>
-            <option value="/TeamProjekt/0000000/0/3">Bike Bottle</option>
+        <select onchange="window.location=this.options[this.selectedIndex].value" id="ArticleSelect">
+            <option>Select Article</option>
+            <option value="/0000000/0/1">Luxury Bike</option>
+            <option value="/0000000/0/2">City Bike</option>
+            <option value="/0000000/0/3">Bike Bottle</option>
         </select> 
 </header>
 <div class="menuBar" id="menuBar">
