--- a/src/app/overview/overview.component.scss
+++ b/src/app/overview/overview.component.scss
@@ -39,9 +39,9 @@ hr {
   margin-right: 20px;
 }
 
-#productSelect {
-  height: 25px;
-  margin-top: 0px;
+#ArticleSelect {
+  height: 35px;
+  margin-top: -5px;
   float:center;
   margin-left: 40px;
 }
