--- a/src/app/overview/overview.component.scss
+++ b/src/app/overview/overview.component.scss
@@ -53,6 +53,24 @@ main {
   z-index: 0;
 }
 
+#popup {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: #e6e6e6;
+  padding: 20px;
+  border: 3px solid rgb(238, 103, 0);
+  text-align: center;
+  z-index: 9999;
+  width: 500px;
+  height: 200px; 
+}
+
+#okButton {
+  margin-top: 10px;
+}
+
 .menuBar ul {
   list-style-type: none;
   margin: 0;
