modified:   src/app/overview/overview.component.html 	modified:   src/app/overview/overview.component.ts

--- a/src/app/overview/overview.component.html
+++ b/src/app/overview/overview.component.html
@@ -42,10 +42,10 @@
 </main>
 
 <div id="popup" style="display: none;">
-    <p>Hier ist der Popup-Text.</p>
+    <p id="popupText"></p>
     <button id="okButton">OK</button>
   </div>
-  
+
 <div id="chatIcon" (click)="showChat()" style="display: block; cursor: pointer; background-color: rgb(238, 103, 0);"        #tooltip="matTooltip"
            matTooltip="Click here to open the the conversational assistant Planny"
            matTooltipPosition= "above">
