--- a/src/app/overview/overview.component.scss
+++ b/src/app/overview/overview.component.scss
@@ -58,17 +58,20 @@ main {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  background-color: #e6e6e6;
+  background-color: rgba(230, 226, 226, 0.9);
   padding: 20px;
-  border: 3px solid rgb(238, 103, 0);
+  border: 5px solid rgb(238, 103, 0);
   text-align: center;
   z-index: 9999;
   width: 500px;
   height: 200px; 
+  font-size: 18px;
 }
 
 #okButton {
-  margin-top: 10px;
+  margin-top: 35px;
+  width: 250px;
+  height: 50px;
 }
 
 .menuBar ul {
