modified:   src/app/article/article.component.scss 	modified:   src/app/information/information.component.scss 	modified:   src/app/methods/methods.component.scss 	modified:   src/app/overview/overview.component.scss 	modified:   src/app/summary/summary.component.html 	modified:   src/app/summary/summary.component.scss 	modified:   src/app/values/values.component.scss

--- a/src/app/article/article.component.scss
+++ b/src/app/article/article.component.scss
@@ -160,10 +160,10 @@ a:not([href]):not([class]) {
 	color: #99D3ED;
   }
   
-  tr:hover {
+  /*tr:hover {
 	background-color:rgb(243, 243, 243);
 	cursor:pointer;
-  }
+  }*/
   
   li a i {
 	margin-right: 4px;
