--- a/src/app/information/information.component.scss
+++ b/src/app/information/information.component.scss
@@ -141,10 +141,10 @@ body {
 	color: #99D3ED;
   }
   
-  tr:hover {
+/*  tr:hover {
 	background-color:rgb(243, 243, 243);
 	cursor:pointer;
-  }
+  }*/
   
   li a i {
 	margin-right: 4px;
