--- a/src/app/summary/summary.component.scss
+++ b/src/app/summary/summary.component.scss
@@ -140,10 +140,10 @@ body {
 	color: #99D3ED;
   }
   
-  tr:hover {
+ /* tr:hover {
 	background-color:rgb(243, 243, 243);
 	cursor:pointer;
-  }
+  }*/
   
   li a i {
 	margin-right: 4px;
