modified:   src/app/overview/overview.component.html 	modified:   src/app/overview/overview.component.scss 	modified:   src/app/overview/overview.component.ts

--- a/src/app/overview/overview.component.html
+++ b/src/app/overview/overview.component.html
@@ -2,14 +2,22 @@
     <div class="headerIcon">FSS-TP</div> <b>Inspector Tool</b> <img id="headerImg"
         src="../../assets/images/Logo_BA.jpg"
         alt="Header Image" style="width: 80px; height: 80px;">
-        
+       
         <select onchange="window.location=this.options[this.selectedIndex].value" id="ArticleSelect">
             <option>Select Article</option>
             <option value="/0000000/0/1">Luxury Bike</option>
             <option value="/0000000/0/2">City Bike</option>
             <option value="/0000000/0/3">Bike Bottle</option>
         </select> 
+
+        <select onchange="window.location=this.options[this.selectedIndex].value" id="ArticleSelect2">
+            <option>Select Article</option>
+            <option value="/0000000/2/1">Luxury Bike</option>
+            <option value="/0000000/2/2">City Bike</option>
+            <option value="/0000000/2/3">Bike Bottle</option>
+        </select> 
 </header>
+
 <div class="menuBar" id="menuBar">
     <ul>
         <!--<li style="float:left"><a class="notClickable" disabled><i class="fas fa-th-list" ></i>Infoprovider</a></li>-->
