--- a/src/app/overview/overview.component.scss
+++ b/src/app/overview/overview.component.scss
@@ -46,6 +46,13 @@ hr {
   margin-left: 40px;
 }
 
+#ArticleSelect2 {
+  height: 35px;
+  margin-top: -5px;
+  float:center;
+  margin-left: 40px;
+}
+
 main {
   margin-left: 20px;
   margin-right: 20px;
