modified:   src/app/overview/overview.component.html

--- a/src/app/overview/overview.component.html
+++ b/src/app/overview/overview.component.html
@@ -5,16 +5,16 @@
        
         <select onchange="window.location=this.options[this.selectedIndex].value" id="ArticleSelect">
             <option>Select Article</option>
-            <option value="/0000000/0/1">Luxury Bike</option>
-            <option value="/0000000/0/2">City Bike</option>
-            <option value="/0000000/0/3">Bike Bottle</option>
+            <option value="/TeamProjekt/0000000/0/1">Luxury Bike</option>
+            <option value="/TeamProjekt/0000000/0/2">City Bike</option>
+            <option value="/TeamProjekt/0000000/0/3">Bike Bottle</option>
         </select> 
 
         <select onchange="window.location=this.options[this.selectedIndex].value" id="ArticleSelect2">
             <option>Select Article</option>
-            <option value="/0000000/2/1">Luxury Bike</option>
-            <option value="/0000000/2/2">City Bike</option>
-            <option value="/0000000/2/3">Bike Bottle</option>
+            <option value="/TeamProjekt/0000000/2/1">Luxury Bike</option>
+            <option value="/TeamProjekt/0000000/2/2">City Bike</option>
+            <option value="/TeamProjekt/0000000/2/3">Bike Bottle</option>
         </select> 
 </header>
 
