--- a/src/app/overview/overview.component.scss
+++ b/src/app/overview/overview.component.scss
@@ -28,6 +28,14 @@ footer {
   margin-right: 8px;
 }
 
+.articleText {
+  padding: 0px 15px;
+  border-radius: 2px;
+  display: inline-block;
+  font-weight: bolder;
+  margin-right: 8px;
+}
+
 hr {
   border-top: 0.5px solid rgb(235, 235, 235);
 }
