--- a/src/app/overview/overview.component.html
+++ b/src/app/overview/overview.component.html
@@ -7,9 +7,9 @@
 
         <select onchange="window.location=this.options[this.selectedIndex].value" id="ArticleSelect">
             <option>Select Article</option>
-            <option value="/0000000/0/1">Luxury Bike</option>
-            <option value="/0000000/0/2">City Bike</option>
-            <option value="/0000000/0/3">Bike Bottle</option>
+            <option value="/TeamProjekt/0000000/0/1">Luxury Bike</option>
+            <option value="/TeamProjekt/0000000/0/2">City Bike</option>
+            <option value="/TeamProjekt/0000000/0/3">Bike Bottle</option>
         </select> 
 
         <select onchange="window.location=this.options[this.selectedIndex].value" id="ArticleSelect2">
